--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,31 +1,45 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
+---
 name: Deploy to AWS EC2
-
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
+    branches:
+      - master
 jobs:
-  build:
-
-    runs-on: self-hosted
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+  deploy:
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm start
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: npm install
+      - name: Build React app
+        run: npm run build
+      - name: Transfer files to EC2 instance
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          source: ./build/
+          target: /var/www/html/react
+      - name: Setup Directory & Permissions
+        run: >
+          ssh -i "$HOME/.ssh/id_rsa" -o StrictHostKeyChecking=no ${{
+          secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} <<'EOF'
+
+          sudo chmod 600 $HOME/.ssh/id_rsa
+
+          sudo chown -R ${{ secrets.EC2_USERNAME }} /var/www/html/react
+
+          tar -xzf /tmp/bsHHGTYRNP.tar.gz -C /var/www/html/react
+
+          sudo chown -R www-data:www-data /var/www/html/react
+
+          EOF
+      - name: Restart NGINX
+        run: ssh -i  StrictHostKeyChecking=no ${{ secrets.EC2_USERNAME }}@${{
+          secrets.EC2_HOST }} "sudo systemctl restart nginx"
     
